src/css/selectBox.css
.tui-select-box {
  position: relative;
}

.input,
.dropdown,
.item-group-label,
.item {
  box-sizing: border-box;
}

/* Input */

.input {
  border: 1px solid #ddd;
  height: 29px;
  padding: 4px 8px;
  cursor: pointer;
}

.input.open {
  border-color: #aaa;
}

.input:focus {
  border: 1px solid transparent;
}

.placeholder {
  display: inline-block;
  margin: 0;
  color: #333;
  font-size: 13px;
  line-height: 15px;
  user-select: none;
  width: calc(100% - 12px);
  vertical-align: sub;
}

.ico-select {
  display: block;
  float: right;
  background: url(../img/ico_tui_select.png) left center no-repeat;
  width: 7px;
  overflow: hidden;
  text-indent: 100%;
}

.open > .ico-select {
  background-position: right center;
}

/* Dropdown */

.dropdown,
.item-group {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.dropdown {
  border: 1px solid #aaa;
  border-top: none;
  /* max-height: 145px; */
  overflow: auto;
  z-index: 1;
  width: 100%;
  position: absolute;
  background: #fff;
}

/* ItemGroup */

.item-group > .item {
  padding-left: 1.5em;
}

.item-group-label {
  display: block;
  font-weight: bold;
}

/* Item */

.item-group-label,
.item {
  height: 29px;
  padding: 8px 7px;
  color: #333;
  font-size: 13px;
  line-height: 15px;
}

.item {
  cursor: pointer;
}

.selected {
  background: #f4f4f4;
}

.highlight {
  background: #e5f6ff;
  outline: none;
}

.placeholder,
.item-group-label,
.item {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* Common */

.hidden {
  display: none; /* for test */
}

.disabled {
  background: #f9f9f9;
  cursor: default;
}

.disabled > * {
  opacity: 0.3;
}

